--- a/ShareFileSnapIn/Properties/Resources.resx
+++ b/ShareFileSnapIn/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppName" xml:space="preserve">
+    <value>ShareFile</value>
+  </data>
   <data name="ClientId" xml:space="preserve">
     <value>IOdm0AhEu7RclDqhC5vKtpcyyJrdcGSK</value>
   </data>
@@ -140,9 +143,6 @@
   </data>
   <data name="MaxExceptionRetry" xml:space="preserve">
     <value>5</value>
-  </data>
-  <data name="ProgressFile" xml:space="preserve">
-    <value />
   </data>
   <data name="RedirectURL" xml:space="preserve">
     <value>https://secure.sharefile.com/oauth/oauthcomplete.aspx</value>
